Fix dark mode colors

--- a/public/style.css
+++ b/public/style.css
@@ -335,6 +335,28 @@ button:hover {
     text-decoration: none;
 }
 
+body.dark-mode {
+    background-color: #040618;
+    color: #fffcef;
+}
+
+body.dark-mode section {
+  background-color: #191b28;
+}
+
+body.dark-mode .hangman__title, body.dark-mode .displayLetter, body.dark-mode #hint, body.dark-mode #progress, body.dark-mode #word,
+body.dark-mode .footer__item--text p, body.dark-mode .footer__item--email button a, body.dark-mode .footer__item--socials button a {
+  color: #fffcef;
+}
+
+body.dark-mode .footer__container {
+  background-color: #191b28;
+}
+
+body.dark-mode .footer__item--email button {
+    border: 1.5px solid #fffcef;
+}
+
 @media screen and (max-width: 1300px) {
     .hangman__base {position: absolute; top: 10rem; left: 2rem;}
     .person {position: absolute; top: 15.5rem; left: 18.4rem;}
